Typo (renamed folders)

--- a/snakeaas/NetteCKEditor/NetteCKEditor.latte
+++ b/snakeaas/NetteCKEditor/NetteCKEditor.latte
@@ -1,7 +1,8 @@
-{control cKEditor}
+{control ckeditor}
 
 <script src="{$basePath}/ckeditor/ckeditor.js"></script>
 <script>
 	CKEDITOR.replace( 'editor', {
-});
+
+	});
 </script>
