Added configurability through code

--- a/snakeaas/NetteCKEditor/NetteCKEditor.latte
+++ b/snakeaas/NetteCKEditor/NetteCKEditor.latte
@@ -2,7 +2,13 @@
 
 <script src="{$basePath}/ckeditor/ckeditor.js"></script>
 <script>
-	CKEDITOR.replace( 'editor', {
+	CKEDITOR.editorConfig = function (config) {
+
+		{!$config}
+
+	};
+
+	CKEDITOR.replace('editor', {
 
 	});
 </script>
