Added HTML preprocessor and image resizer

--- a/snakeaas/NetteCKEditor/NetteCKEditor.latte
+++ b/snakeaas/NetteCKEditor/NetteCKEditor.latte
@@ -9,6 +9,7 @@
 	};
 
 	CKEDITOR.replace('editor', {
-
+		"extraPlugins": "imagebrowser",
+		"imageBrowser_listUrl": {link GetJsonImageList}
 	});
 </script>
